--- a/estilos.css
+++ b/estilos.css
@@ -53,8 +53,25 @@ p{
   width: 70%;
  
 }
+#sobre_nosotros2{
+  background-color: rgba(207, 235, 235, 0.748);
+  width: 100%;
+  height: 85%;
+}
 iframe{
   width: 80%;
   padding-top: 10px;
 }
 
+#sobre_nosotros{
+  width: 50%; 
+  display: block;
+  margin: auto;
+  border-radius: 20%;
+  padding-top: 10px;
+  padding-bottom: 8px;
+}
+#sobre_nosotros2 p{
+  padding-left: 3%;
+  padding-right: 3%;
+}
