--- a/estilos.css
+++ b/estilos.css
@@ -31,7 +31,6 @@ p{
 }
 .mi_footer{
   background-color: rgba(128, 0, 128, 0.849);
-  width: 100%;
   text-align: center;
 }
 .mi_footer p{
@@ -74,4 +73,34 @@ iframe{
 #sobre_nosotros2 p{
   padding-left: 3%;
   padding-right: 3%;
+}
+.table{
+  padding-top: 10%;
+}
+
+div img{
+  padding-top: 2%;
+}
+#form_llevar{
+  margin-top: 3%;
+  background: linear-gradient(to bottom right, rgb(232, 148, 243), pink);
+  margin-bottom: 3%;
+  font-weight: bold;
+  padding-left: 2%;
+  padding-right: 2%;
+  padding-top: 0.5%;
+}
+.dropdown-menu{
+  background-color: rgba(127, 255, 212, 0.692);
+  border-radius: 30%;
+}
+.dropdown-item:hover{
+  color: black;
+  font-weight: bold;
+  background-color: rgba(181, 83, 247, 0.623);
+
+  border-top-left-radius: 45%;
+  border-top-right-radius: 45%;
+  border-bottom-left-radius: 45%;
+  border-bottom-right-radius: 45%;
 }
